--- a/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
@@ -49,9 +49,8 @@
     <Compile Include="Contracts\IPerson.cs" />
     <Compile Include="Contracts\IUser.cs" />
     <Compile Include="Models\Abstract\Person.cs" />
-    <Compile Include="Models\Actor.cs" />
+    <Compile Include="Models\Participant.cs" />
     <Compile Include="Models\Review.cs" />
-    <Compile Include="Models\Director.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
