--- a/Squids-Movies-App/SquidsMovieApp.Program/App.config
+++ b/Squids-Movies-App/SquidsMovieApp.Program/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+<connectionStrings> 
+  <add name="MovieAppContext"  
+        providerName="System.Data.SqlClient"  
+        connectionString="Server=.\SQLEXPRESS;Database=MovieApp;Integrated Security=True;"/> 
+</connectionStrings>
 </configuration>
