added logic project to store models behaviour and validation

--- a/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MovieAppEngine.cs" />
     <Compile Include="Commands\Class1.cs" />
     <Compile Include="Contracts\Interface1.cs" />
     <Compile Include="Dependency\AutofacConfig.cs" />
