Removed temp migrations

--- a/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
@@ -56,19 +56,12 @@
     <Compile Include="Migrations\201803150939264_InitialCreate.Designer.cs">
       <DependentUpon>201803150939264_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201803151313222_UsersToLikedAndBoughtMoviesAndUsersToLikedActorsAndDirectorsLinks.cs" />
-    <Compile Include="Migrations\201803151313222_UsersToLikedAndBoughtMoviesAndUsersToLikedActorsAndDirectorsLinks.Designer.cs">
-      <DependentUpon>201803151313222_UsersToLikedAndBoughtMoviesAndUsersToLikedActorsAndDirectorsLinks.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803151404034_added review table.cs" />
-    <Compile Include="Migrations\201803151404034_added review table.Designer.cs">
-      <DependentUpon>201803151404034_added review table.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803151425185_fluent api user-review-movie.cs" />
-    <Compile Include="Migrations\201803151425185_fluent api user-review-movie.Designer.cs">
-      <DependentUpon>201803151425185_fluent api user-review-movie.cs</DependentUpon>
+    <Compile Include="Migrations\201803151458486_MovieDbCreated.cs" />
+    <Compile Include="Migrations\201803151458486_MovieDbCreated.Designer.cs">
+      <DependentUpon>201803151458486_MovieDbCreated.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Participant.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\Movie.cs" />
@@ -83,14 +76,8 @@
     <EmbeddedResource Include="Migrations\201803150939264_InitialCreate.resx">
       <DependentUpon>201803150939264_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803151313222_UsersToLikedAndBoughtMoviesAndUsersToLikedActorsAndDirectorsLinks.resx">
-      <DependentUpon>201803151313222_UsersToLikedAndBoughtMoviesAndUsersToLikedActorsAndDirectorsLinks.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803151404034_added review table.resx">
-      <DependentUpon>201803151404034_added review table.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803151425185_fluent api user-review-movie.resx">
-      <DependentUpon>201803151425185_fluent api user-review-movie.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803151458486_MovieDbCreated.resx">
+      <DependentUpon>201803151458486_MovieDbCreated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
