added some interfaces for factory. Added new DTO project

--- a/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Class1.cs" />
-    <Compile Include="Context\DBContext.cs" />
+    <Compile Include="Context\MovieAppDBContext.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Participant.cs" />
     <Compile Include="Models\Review.cs" />
