--- a/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
@@ -47,12 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\Contracts\IGenreFactory.cs" />
+    <Compile Include="Factories\Contracts\IParticipantFactory.cs" />
+    <Compile Include="Factories\Contracts\IReviewFactory.cs" />
+    <Compile Include="Factories\Contracts\IUserFactory.cs" />
     <Compile Include="MovieAppEngine.cs" />
     <Compile Include="Commands\Class1.cs" />
-    <Compile Include="Contracts\Interface1.cs" />
+    <Compile Include="Contracts\IEngine.cs" />
     <Compile Include="Dependency\AutofacConfig.cs" />
     <Compile Include="Factories\Class1.cs" />
-    <Compile Include="Factories\Contracts\Interface1.cs" />
+    <Compile Include="Factories\Contracts\IMovieFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Class1.cs" />
   </ItemGroup>
