--- a/Squids-Movies-App/SquidsMovieApp.Program/SquidsMovieApp.Program.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Program/SquidsMovieApp.Program.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -41,6 +47,10 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutofacModule.cs" />
+    <Compile Include="AutomapperConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,6 +72,14 @@
     <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
       <Project>{4BBB6B73-E52A-4B9D-843D-46D10AF8FD62}</Project>
       <Name>SquidsMovieApp.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SquidsMovieApp.DTO\SquidsMovieApp.DTO.csproj">
+      <Project>{22E0CAC0-3E8F-4DA3-9B90-86545D78C3C8}</Project>
+      <Name>SquidsMovieApp.DTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SquidsMovieApp.Logic\SquidsMovieApp.Logic.csproj">
+      <Project>{40E7702E-C900-40B2-95E5-FDF9C8D22E5C}</Project>
+      <Name>SquidsMovieApp.Logic</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
