--- a/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Commands\Class1.cs" />
     <Compile Include="Contracts\IEngine.cs" />
     <Compile Include="Dependency\AutofacConfig.cs" />
-    <Compile Include="Factories\Class1.cs" />
+    <Compile Include="Factories\MovieModelFactory.cs" />
     <Compile Include="Factories\Contracts\IMovieFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Class1.cs" />
@@ -63,6 +63,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SquidsMovieApp.DTO\SquidsMovieApp.DTO.csproj">
+      <Project>{22E0CAC0-3E8F-4DA3-9B90-86545D78C3C8}</Project>
+      <Name>SquidsMovieApp.DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
