--- a/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
@@ -66,9 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IMovieService.cs" />
     <Compile Include="MovieService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validations\MovieInfoValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
