--- a/Squids-Movies-App/SquidsMovieApp.Program/packages.config
+++ b/Squids-Movies-App/SquidsMovieApp.Program/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
+  <package id="Bytes2you.Validation" version="2.0.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
 </packages>
