--- a/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Data/SquidsMovieApp.Data.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\Participant.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
