--- a/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
@@ -67,8 +67,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IMovieService.cs" />
+    <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="MovieService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
