--- a/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Factories\Contracts\IMovieFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AuthProvider.cs" />
+    <Compile Include="Providers\UserContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
