--- a/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
@@ -65,11 +65,14 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IMovieService.cs" />
+    <Compile Include="Contracts\IRoleService.cs" />
+    <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="MovieService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
