implemented some (AddParticipant) ParticipantController/Logic.

--- a/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Core/SquidsMovieApp.Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Factories\Contracts\IParticipantFactory.cs" />
     <Compile Include="Factories\Contracts\IReviewFactory.cs" />
     <Compile Include="Factories\Contracts\IUserFactory.cs" />
+    <Compile Include="Factories\ParticipantModelFactory.cs" />
     <Compile Include="Factories\UserModelFactory.cs" />
     <Compile Include="MovieAppEngine.cs" />
     <Compile Include="Contracts\IEngine.cs" />
