--- a/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Logic/SquidsMovieApp.Logic.csproj
@@ -68,11 +68,13 @@
   <ItemGroup>
     <Compile Include="Contracts\IMovieService.cs" />
     <Compile Include="Contracts\IParticipantService.cs" />
+    <Compile Include="Contracts\IReviewService.cs" />
     <Compile Include="Contracts\IRoleService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="MovieService.cs" />
     <Compile Include="ParticipantService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReviewService.cs" />
     <Compile Include="RoleService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
