--- a/Squids-Movies-App/SquidsMovieApp.Utilities/SquidsMovieApp.Utilities.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Utilities/SquidsMovieApp.Utilities.csproj
@@ -36,6 +36,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -47,12 +50,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Converters\MovieConverter.cs" />
+    <Compile Include="Parsers\Models\MovieParsedModel.cs" />
+    <Compile Include="Parsers\Parser.cs" />
+    <Compile Include="Converters\ImageConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="JsonData\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
+      <Project>{4BBB6B73-E52A-4B9D-843D-46D10AF8FD62}</Project>
+      <Name>SquidsMovieApp.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
