--- a/Squids-Movies-App/SquidsMovieApp.WPF/App.config
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/App.config
@@ -1,6 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="MovieAppContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=MovieApp;Integrated Security=True;" />
+  </connectionStrings>
 </configuration>
