--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MovieModel.cs" />
     <Compile Include="ParticipantModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReviewModel.cs" />
     <Compile Include="UserModel.cs" />
   </ItemGroup>
   <ItemGroup>
