--- a/Squids-Movies-App/SquidsMovieApp.Program/SquidsMovieApp.Program.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Program/SquidsMovieApp.Program.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
