--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -58,6 +58,10 @@
       <Project>{4BBB6B73-E52A-4B9D-843D-46D10AF8FD62}</Project>
       <Name>SquidsMovieApp.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SquidsMovieApp.Models\SquidsMovieApp.Models.csproj">
+      <Project>{2EDD6303-C743-43FD-AD01-19F623ABDF5A}</Project>
+      <Name>SquidsMovieApp.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
