--- a/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Models/SquidsMovieApp.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{168B02CD-9CB0-4393-8C54-024E8FF5BD8A}</ProjectGuid>
+    <ProjectGuid>{2EDD6303-C743-43FD-AD01-19F623ABDF5A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SquidsMovieApp.Core</RootNamespace>
-    <AssemblyName>SquidsMovieApp.Core</AssemblyName>
+    <RootNamespace>SquidsMovieApp.Models</RootNamespace>
+    <AssemblyName>SquidsMovieApp.Models</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,39 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IUserContext.cs" />
-    <Compile Include="Factories\Contracts\IGenreFactory.cs" />
-    <Compile Include="Factories\Contracts\IParticipantFactory.cs" />
-    <Compile Include="Factories\Contracts\IReviewFactory.cs" />
-    <Compile Include="Factories\Contracts\IUserFactory.cs" />
-    <Compile Include="Factories\ParticipantModelFactory.cs" />
-    <Compile Include="Factories\UserModelFactory.cs" />
-    <Compile Include="MovieAppEngine.cs" />
-    <Compile Include="Contracts\IEngine.cs" />
-    <Compile Include="Dependency\AutofacConfig.cs" />
-    <Compile Include="Factories\MovieModelFactory.cs" />
-    <Compile Include="Factories\Contracts\IMovieFactory.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MoviePoster.cs" />
+    <Compile Include="Models\Participant.cs" />
+    <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\AuthProvider.cs" />
-    <Compile Include="Providers\UserContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SquidsMovieApp.Data\SquidsMovieApp.Data.csproj">
-      <Project>{4BBB6B73-E52A-4B9D-843D-46D10AF8FD62}</Project>
-      <Name>SquidsMovieApp.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SquidsMovieApp.DTO\SquidsMovieApp.DTO.csproj">
-      <Project>{22E0CAC0-3E8F-4DA3-9B90-86545D78C3C8}</Project>
-      <Name>SquidsMovieApp.DTO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SquidsMovieApp.Models\SquidsMovieApp.Models.csproj">
-      <Project>{2EDD6303-C743-43FD-AD01-19F623ABDF5A}</Project>
-      <Name>SquidsMovieApp.Models</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
