--- a/Squids-Movies-App/SquidsMovieApp.Tests/SquidsMovieApp.Tests.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.Tests/SquidsMovieApp.Tests.csproj
@@ -110,6 +110,10 @@
       <Project>{40E7702E-C900-40B2-95E5-FDF9C8D22E5C}</Project>
       <Name>SquidsMovieApp.Logic</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SquidsMovieApp.Models\SquidsMovieApp.Models.csproj">
+      <Project>{2EDD6303-C743-43FD-AD01-19F623ABDF5A}</Project>
+      <Name>SquidsMovieApp.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
