--- a/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
+++ b/Squids-Movies-App/SquidsMovieApp.DTO/SquidsMovieApp.DTO.csproj
@@ -46,8 +46,10 @@
   <ItemGroup>
     <Compile Include="MovieModel.cs" />
     <Compile Include="ParticipantModel.cs" />
+    <Compile Include="MoviePosterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReviewModel.cs" />
+    <Compile Include="RoleModel.cs" />
     <Compile Include="UserModel.cs" />
   </ItemGroup>
   <ItemGroup>
